--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-ourdirs = TeraLCP TeraMS msIndexBuilder TeraMEM #repeats stats extract loader 
+ourdirs = TeraLCP TeraMS TeraIndex TeraMEM #repeats stats extract loader 
 subdirs = $(ourdirs) thirdparty
 
 all: $(subdirs)
