--- a/src/TeraIndex/Makefile
+++ b/src/TeraIndex/Makefile
@@ -19,7 +19,7 @@ objs = $(foreach obj, $(ropebwt3objs), $(ropebwt3dir)/$(obj))
 
 msHeads = $(optIncDir)/util/util.h\
 		  $(optIncDir)/TeraLCP/TeraLCP.h\
-		  $(optIncDir)/TeraIndex/msIndex.h\
+		  $(optIncDir)/TeraIndex/TeraIndex.h\
 		  $(optIncDir)/moveStructure/moveStructure.h
 
 libs = -lsdsl -lpthread -lz -lm -latomic
