--- a/src/TeraIndex/Makefile
+++ b/src/TeraIndex/Makefile
@@ -13,7 +13,8 @@ incdir = ../thirdparty/include
 libdir = ../thirdparty/lib
 ropebwt3dir = ../../ropebwt3
 
-ropebwt3objs = $(shell grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
+ropebwt3objs = $(shell if [ ! -d $(ropebwt3dir) ]; then git clone https://github.com/lh3/ropebwt3 $(ropebwt3dir); fi &&\
+	grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
 
 objs = $(foreach obj, $(ropebwt3objs), $(ropebwt3dir)/$(obj))
 
@@ -52,5 +53,11 @@ test: TeraIndex TeraLCPTest
 		./TeraIndex -i ../TeraLCP/$$testind.lcp_index -o $$testind; \
 	done
 
-TeraIndex: TeraIndex.cpp $(msHeads) $(objs)
+$(objs): 
+	make -C $(ropebwt3dir)
+
+$(libdir) $(incdir):
+	make -C ../thirdparty/
+
+TeraIndex: TeraIndex.cpp $(msHeads) $(objs) $(libdir) $(incdir)
 	$(CXX) $(cppflags) $(incs) -L$(libdir) $(objs) $< -o $@ $(libs)
