--- a/src/TeraLCP/Makefile
+++ b/src/TeraLCP/Makefile
@@ -13,7 +13,8 @@ incdir = ../thirdparty/include
 libdir = ../thirdparty/lib
 ropebwt3dir = ../../ropebwt3
 
-ropebwt3objs = $(shell grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
+ropebwt3objs = $(shell if [ ! -d $(ropebwt3dir) ]; then git clone https://github.com/lh3/ropebwt3 $(ropebwt3dir); fi &&\
+	grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
 
 objs = $(foreach obj, $(ropebwt3objs), $(ropebwt3dir)/$(obj))
 
@@ -56,5 +57,11 @@ test: TeraLCP
         rm testTEMPFILE; \
 	done
 
-TeraLCP: TeraLCP.cpp $(lcpHeads) $(objs)
+$(objs): 
+	make -C $(ropebwt3dir)
+
+$(libdir) $(incdir):
+	make -C ../thirdparty/
+
+TeraLCP: TeraLCP.cpp $(lcpHeads) $(objs) $(libdir) $(incdir)
 	$(CXX) $(cppflags) $(incs) -L$(libdir) $(objs) $< -o $@ $(libs)
