--- a/src/TeraMS/Makefile
+++ b/src/TeraMS/Makefile
@@ -14,7 +14,8 @@ libdir = ../thirdparty/lib
 kseqdir = ../thirdparty/kseq
 ropebwt3dir = ../../ropebwt3
 
-ropebwt3objs = $(shell grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
+ropebwt3objs = $(shell if [ ! -d $(ropebwt3dir) ]; then git clone https://github.com/lh3/ropebwt3 $(ropebwt3dir); fi &&\
+	grep -oPz "OBJS=.*\\\\\n.*\n" $(ropebwt3dir)/Makefile | tail -c +6 | tr -d "\\\\")
 
 objs = $(foreach obj, $(ropebwt3objs), $(ropebwt3dir)/$(obj))
 
@@ -50,5 +51,11 @@ clean:
 #		./TeraLCP -f fmd -i $$testind -orlcp test.rlcp -t testTEMPFILE; \
 #	done
 
-TeraMS: TeraMS.cpp $(msHeads) $(objs)
+$(objs): 
+	make -C $(ropebwt3dir)
+
+$(libdir) $(incdir):
+	make -C ../thirdparty/
+
+TeraMS: TeraMS.cpp $(msHeads) $(objs) $(libdir) $(incdir)
 	$(CXX) $(cppflags) $(incs) -L$(libdir) $(objs) $< -o $@ $(libs)
